Removed --add-exports on xerces.internal from build, SAAJ-API bumped to snapshot