@@ -553,12 +553,6 @@
                                 <arg>--add-modules</arg>
                                 <arg>java.activation,java.xml</arg>
                                 <!--<arg>-Xmodule:java.xml.ws</arg>-->
-                                <arg>--add-exports</arg>
-                                <arg>java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED</arg>
-                                <arg>--add-exports</arg>
-                                <arg>java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED</arg>
-                                <arg>--add-exports</arg>
-                                <arg>java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED</arg>
                                 <!--<arg>-XDignore.symbol.file</arg>-->
                             </compilerArgs>
                         </configuration>
