@@ -412,9 +412,6 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <argLine>
-                                --add-exports java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED
-                                --add-exports java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED
-                                --add-exports java.xml/com.sun.org.apache.xerces.internal.util=ALL-UNNAMED
                                 --add-exports java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED
                                 --add-exports java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED
                                 --add-modules java.activation
